frontend/test/should_pass/basic_052.grg
using basic_model_001;

rule r {
	x : A;
	y : B;
	z : C;

	replace {
		b : B;
	}
}

