frontend/test/should_fail/basic_104.grg
using basic_model_002;

rule dummy {
  replace {
    :B;
  }
}
